Closes #1915 template RTL: minor fix align badge

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_rtl.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_rtl.scss
@@ -113,6 +113,7 @@
 
 		.art-badge {
 			border-radius: 0.85rem 0 0 0.85rem;
+			float: right;
 		}
 	}
 
